# pm-internship-sih

./: .gitignore  README.md  package-lock.json
backend-js/: index.js  package-lock.json  package.json  seed.js
backend-js/Model/: Application.js  Company.js  Internship.js  Project.js  Question.js  User.js
backend-js/config/: authConfig.js  multerConfig.js
backend-js/controller/: CompanyController.js  GitController.js  InternshipController.js  ResumeController.js  UserController.js  UserInternshipController.js
backend-js/middleware/: Auth0.js  UserAuth.js  companyAuth.js
backend-js/routes/: CompanyRouter.js  UserRouter.js
backend-py/: pyproject.toml
backend-py/app/: app.py  build_jobs_index.py  check_mongo.py  db.py  distance_calc.py  distance_route.py  internship_recommender_api.py  job_meta.json  jobs_index.faiss  main.py  models.py  pincode_cache.json  quiz_api.py  recommender.py  recommender2.py  recommender4.py  recommender5.py  resume_parser_api.py  user_service.py
backend-py/src/backend_py/: job_meta.json  jobs_index.faiss  mlexample.py  quiz.py  quiz_api.py  reco_test.py  recommendation_mvp.py  resumeParser.py  resume_parser_api.py  test.py  torchgpucheck.py
frontend/: README_LATEX.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.jsx  page.tsx
frontend/app/Home/: page.tsx
frontend/app/Internships/: page.tsx
frontend/app/businesLogin/: page.tsx
frontend/app/businessResults/: page.tsx
frontend/app/lib/: api.ts
ignore/: package-lock.json  package.json
(+53 files in other folders)
